[gd_scene load_steps=10 format=3 uid="uid://dlwxw6p75l28l"]

[ext_resource type="Script" uid="uid://e4t14gmu40e4" path="res://Scripts/Stage1.gd" id="1_kbj7r"]
[ext_resource type="PackedScene" uid="uid://bsaxnv6uo08cq" path="res://Scenes/HUD.tscn" id="2_kbj7r"]
[ext_resource type="PackedScene" uid="uid://dqsuvkurtebk4" path="res://Scenes/StartMenu.tscn" id="3_h8ev4"]
[ext_resource type="PackedScene" uid="uid://djfyvb5aah6k6" path="res://Scenes/Gameplay.tscn" id="4_nn7tr"]
[ext_resource type="Texture2D" uid="uid://cwn54xwnvnv1v" path="res://Assets/Textures/WaterF1.png" id="5_kbj7r"]

[sub_resource type="Environment" id="Environment_kbj7r"]
background_mode = 2
fog_enabled = true
fog_mode = 1
fog_density = 0.5
fog_depth_begin = 125.0
fog_depth_end = 150.0

[sub_resource type="Curve3D" id="Curve3D_kbj7r"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 10, 100, 0, 0, 0, 0, 0, 0, 5, 0, 150, 0, 0, 0, 0, 0, 0, 0, 0, 200),
"tilts": PackedFloat32Array(0, 0, 0, 0)
}
point_count = 4

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h8ev4"]
albedo_texture = ExtResource("5_kbj7r")
uv1_scale = Vector3(5, 20, 20)

[sub_resource type="PlaneMesh" id="PlaneMesh_nn7tr"]
size = Vector2(50, 500)

[node name="Stage1" type="Node3D"]
script = ExtResource("1_kbj7r")

[node name="FadeEffect" type="ColorRect" parent="."]
z_index = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="HUD" parent="." instance=ExtResource("2_kbj7r")]

[node name="StartMenu" parent="." instance=ExtResource("3_h8ev4")]

[node name="Gameplay" parent="." instance=ExtResource("4_nn7tr")]
transform = Transform3D(1, -8.6988905e-09, -4.338716e-10, 8.698891e-09, 0.9950373, 0.09950372, -4.338645e-10, -0.09950372, 0.9950373, 0, 0, 0)

[node name="Level" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Level"]
transform = Transform3D(0.70710695, 0.6123726, -0.35355344, 0, 0.50000006, 0.8660256, 0.70710695, -0.6123726, 0.35355344, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Level"]
environment = SubResource("Environment_kbj7r")

[node name="Path3D" type="Path3D" parent="Level"]
curve = SubResource("Curve3D_kbj7r")

[node name="PathFollow3D" type="PathFollow3D" parent="Level/Path3D"]
transform = Transform3D(-0.9999996, -8.698883e-09, -8.698909e-08, 0, 0.9950365, -0.099503905, 8.742274e-08, -0.09950363, -0.9950392, 0, 0, 0)
loop = false
tilt_enabled = false

[node name="Ground" type="MeshInstance3D" parent="Level"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 222.24054)
material_override = SubResource("StandardMaterial3D_h8ev4")
mesh = SubResource("PlaneMesh_nn7tr")
